[package]
name = "pngme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.3.23", features = ["derive"] }
crc = "3.0.1"
curl = "0.4.46"
rpassword = "7.3.1"
sha3 = "0.10.8"
thiserror = "1.0.56"
