[package]
name = "pngme_cli"
version = "0.1.0"
edition = "2021"
authors = ["Cuong Nguyen <ancuongnguyen07@gmail.com>"]
license = "MIT License"
repository = "https://github.com/ancuongnguyen07/PNGme/pngme_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pngme-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
curl = "0.4.46"
rpassword = "7.3.1"
thiserror = "1.0.56"
pngme_core = { path = "../pngme_core" }
base64 = "0.22.1"
