[package]
name = "pngme_wasm"
version = "0.1.0"
authors = ["Cuong Nguyen <ancuongnguyen07@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
pngme_core = { path = "../pngme_core" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["console",] }
base64 = "0.22.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
# a more aggressive option could be `opt-level = "z"`
# Sometimes, 's' options outputs a better result than the 'z' opt
# ALWAYS mesure!!!
opt-level = "s"
# Give LLVM many more chances to inline and prune functions
# -> faster at runtime but the compilation time could be long.
lto = true
